--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -1,24 +1,13 @@
-sp:
-  user-service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
-
-spring:
-  application:
-    name: user-service
+spring: 
   cloud:
     config:
-      override-none: true
-    
-server:
-  port: 8101
-  
+      discovery:
+        enabled: true
+        service-id: config-server
+      name: order-service
+      profile: dev
+      
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka  
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh
+      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
