--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -7,4 +7,7 @@ spring:
       name: zuul
       profile: dev
       
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
