--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,13 +1,20 @@
-spring: 
+spring:
+  application:
+    name: item-service
   cloud:
     config:
-      discovery:
-        enabled: true
-        service-id: config-server
-      name: item-service
-      profile: dev
-      
+      override-none: true
+  rabbitmq:
+    host: 192.168.153.132
+    port: 5672
+    username: admin
+    password: admin
+    
+server:
+  port: 8001
+  
 eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+
