--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -1,13 +1,30 @@
-spring: 
+spring:
+  application:
+    name: order-service
   cloud:
     config:
-      discovery:
-        enabled: true
-        service-id: config-server
-      name: order-service
-      profile: dev
-      
+      override-none: true
+  rabbitmq:
+    host: 192.168.153.132
+    port: 5672
+    username: admin
+    password: admin
+
+server:
+  port: 8201  
+  
 eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      
+feign:
+  hystrix:
+    enabled: true
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
+        
